[gd_scene load_steps=6 format=3 uid="uid://cmafrmtjpoalp"]

[ext_resource type="Script" uid="uid://c568up2cc8ofp" path="res://scripts/combat/ReplayViewer.gd" id="1"]
[ext_resource type="Script" uid="uid://dy1qjw1ce5hly" path="res://scripts/combat/ShipDisplay.gd" id="2"]
[ext_resource type="PackedScene" path="res://scenes/combat/TimelineBar.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://y1akstmn6odh" path="res://assets/sprites/ui/starfield.png" id="4"]
[ext_resource type="Script" uid="uid://dly506ra5y862" path="res://scripts/combat/CombatFX.gd" id="5"]

[node name="ReplayViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 1

[node name="ShipBattleArea" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -957.0
offset_top = -169.0
offset_right = 963.0
offset_bottom = 431.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 360

[node name="PlayerShipContainer" type="Control" parent="ShipBattleArea"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="PlayerShipDisplay" type="Node2D" parent="ShipBattleArea/PlayerShipContainer"]
position = Vector2(298, -4)
rotation = 0.0013108985
scale = Vector2(0.6, 0.6)
script = ExtResource("2")

[node name="EnemyShipContainer" type="Control" parent="ShipBattleArea"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnemyShipDisplay" type="Node2D" parent="ShipBattleArea/EnemyShipContainer"]
position = Vector2(100, 0)
scale = Vector2(0.6, 0.6)
script = ExtResource("2")

[node name="TurnIndicator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "TURN 1 / 15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerHealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 348.0
offset_top = 250.0
offset_right = 648.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "100 / 100 HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyHealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 244.0
offset_right = 1200.0
offset_bottom = 284.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "40 / 40 HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EventsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1363.0
offset_top = 776.0
offset_right = 1863.0
offset_bottom = 1038.0

[node name="EventsLog" type="RichTextLabel" parent="EventsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 10.0
offset_right = -11.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[b]TURN 1 EVENTS:[/b]
â€¢ Loading..."
scroll_following = true

[node name="TimelineBar" parent="." instance=ExtResource("3")]
custom_minimum_size = Vector2(1200, 50)
layout_mode = 0
offset_left = 53.0
offset_top = 900.0
offset_right = 1253.0
offset_bottom = 950.0

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 965.0
offset_right = 390.0
offset_bottom = 1015.0
theme_override_font_sizes/font_size = 18
text = "START"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 965.0
offset_right = 500.0
offset_bottom = 1015.0
theme_override_font_sizes/font_size = 18
text = "PLAY"

[node name="PauseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 510.0
offset_top = 965.0
offset_right = 610.0
offset_bottom = 1015.0
theme_override_font_sizes/font_size = 18
text = "PAUSE"

[node name="EndButton" type="Button" parent="."]
layout_mode = 0
offset_left = 620.0
offset_top = 965.0
offset_right = 720.0
offset_bottom = 1015.0
theme_override_font_sizes/font_size = 18
text = "END"

[node name="CombatFX" type="Node2D" parent="."]
z_index = 50
script = ExtResource("5")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 20.0
offset_right = 1030.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 18
text = "BACK TO COMBAT"

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1050.0
offset_top = 20.0
offset_right = 1230.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 18
text = "NEXT MISSION"
